[project]
name = "binance-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastmcp>=2.13.0.2",
    "langchain>=1.0.7",
    "langchain-groq>=1.0.1",
    "langchain-mcp-adapters>=0.1.13",
    "langgraph>=1.0.3",
    "mcp>=1.21.1",
]
